<resources>
    <string name="sample_title">sample title</string>
    <string name="intro_screen_description">intro screen description</string>
    <string name="skip">skip</string>
    <string name="onboarding_title_1">Giving</string>
    <string name="onboarding_title_2">Show Reports</string>
    <string name="onboarding_title_3">Asset Managment</string>
    <string name="onboarding_title_4">Conference</string>
    <string name="onboarding_description">Nulla pellentesque tellus et lacus tincidunt, a et auctor quam tincidunt. Praesent aliquet church</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_deliverance">Welcome to Deliverance church International</string>
    <string name="welcome_insruction">Please click on ”Continue button” to get Started with your account and enjoy our services</string>
    <string name="get_started">Get started</string>
    <string name="account_lookup">Account lookup</string>
    <string name="account_lookup_description"><![CDATA[Please provide your Full name & ID Number so that we can fetch your account details.]]></string>
    <string name="agree">I agree to the</string>
    <string name="terms_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="fetch">Fetch</string>
    <string name="error_fetching_questions">There was an error fetching the security questions</string>
    <string name="answer_invalid">Kindly fill out this field in order to proceed</string>
    <string name="error_setting_questions">The was an error setting your question answers kindly contact support</string>
    <string name="session_will_expire_in">"This session will expire in : "</string>
    <string name="church1">First Church</string>
    <string name="skip_btn"><u>Skip</u></string>
    <string name="screen_1_description">Say Hi to your therapist friend. Consult with the best therapist and psychiatrists over audio and video call anytime anywhere</string>
    <string name="onboarding_title_one">It\'s okay to ask for help.</string>
    <string name="screen_2_description">It\'s okay if you have a bad day, some are less than perfect. Talk to your AI friend for some good advice and help</string>
    <string name="onboarding_title_two">Need someone to talk to?</string>
    <string name="screen_3_description">Feeling anxious, stressed, tired, sad or bad memories and don;t know what to do? Here we are, get personalised meditation sessions for your problems.</string>
    <string name="onboarding_title_three">Mental health Matters!</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="app_name">Mindfullness</string>
    <string name="title_identity">Identity</string>
    <string name="title_onboarding">Onboarding</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_support">Support</string>
    <string name="title_sme">SME</string>
    <string name="title_chama">Chama</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">More</string>
    <string name="title_investment">Investment</string>
    <string name="title_insurance">Insurance</string>
    <string name="action_delete">Delete</string>
    <string name="account_found">Account Found Successfully</string>
    <string name="account_found_description">We found an account with the details you provided To us. Please click activate button to continue</string>
    <string name="activate">Activate</string>
    <string name="account_not_found">Ooops! Account not found</string>
    <string name="account_not_found_description">The details provided does not match with the one On our system. Please contact our customer care.</string>
    <string name="call">Call</string>
    <string name="text_validation_success">Text validation success</string>
    <string name="text_validation_error_empty_field">kindly fill out the required data in the textfields</string>
    <string name="dashboard_title">Deliverance Church Intl.</string>
    <string name="Continue">Continue</string>
    <string name="Settings">Settings</string>
    <string name="PushNotifications">Push Notifications</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="EmailNotifications">Email Notifications</string>
    <string name="SMSNotifications">SMS Notifications</string>
    <string name="PROFILE">Profile</string>
    <string name="COMPLETEPROFILE">Complete Profile</string>
    <string name="Vieweditdetails">View edit details</string>
    <string name="LANGUAGE">LANGUAGE</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="Setupanotherlanguage">Set up another language</string>
    <string name="PIN">PIN</string>
    <string name="ChangePin">Change Pin</string>
    <string name="SetNewPin">Set new PIN</string>
    <string name="EMAIL">EMAIL</string>
    <string name="ChangeEmail">Change Email</string>
    <string name="SetNewEmail">Set new email</string>
    <string name="is_first_login">Is first login?</string>
    <string name="more_details">More Details</string>
    <string name="month_year"><![CDATA[MONTH & YEAR:]]></string>
    <string name="april_2022">APRIL 2022</string>
    <string name="pink_form">PINK FORM</string>
    <string name="payment_mode">PAYMENT MODE:</string>
    <string name="mobile_money">Mobile Money</string>
    <string name="provider">PROVIDER:</string>
    <string name="provider_value">Safaricom Mpesa</string>
    <string name="mobile_number">MOBILE NUMBER:</string>
    <string name="mobile_number_value">0768 989 789</string>
    <string name="amount">AMOUNT:</string>
    <string name="amount_value">KES 3,500</string>
    <string name="dismiss">Dismiss</string>
    <string name="cancel">Cancel</string>
    <string name="tithe_successful">Tithe Added Successfully</string>
    <string name="tithe_successful_description">You have successfully added new tithe to the church .</string>
    <string name="okay">Okay</string>
    <string name="special_successful">Special offering Added Successfully</string>
    <string name="special_successful_description">You have successfully added special offering to the church .</string>
    <string name="profile_complete">Profile completed Successfully</string>
    <string name="profile_complete_description">You have successfully completed your profile. Please select “Done button” to continue using your Account</string>
    <string name="done">Done</string>
    <string name="no_internet">oops, it seems you have no internet connection, try reconnecting below</string>
    <string name="reconnect">Reconnect</string>
    <string name="pref_file_name">Deliverance preferences</string>
    <string name="is_first_login_pref">Is first login?</string>
    <string name="user_name">USERNAME</string>
    <string name="church_one">CHURCH_1</string>
    <string name="church_two">CHURCH_2</string>
    <string name="marriage_title">Marriage Certificate</string>
    <string name="add_or_view_marriage">Add or view members marriage certificates records.</string>
    <string name="eg_april">E.g April,2022</string>
    <string name="select_month_year">Select Month and Year</string>
    <string name="bride_name">BRIDE NAME:</string>
    <string name="groom_name">GROOM NAME:</string>
    <string name="bride_id">BRIDE ID:</string>
    <string name="groom_id">GROOM ID:</string>
    <string name="wedding_date">WEDDING DATE:</string>
    <string name="marriage_successful">Certificate Added Successfully</string>
    <string name="marriage_successful_description">You have successfully added a new marriage certificate</string>
    <string name="water_baptism_title">Water Baptism</string>
    <string name="water_baptism_description">Add or view members Baptism records.</string>
    <string name="baptism_successful">Baptism Added Successfully</string>
    <string name="baptism_successful_description">You have successfully added a new Baptism to the church</string>
    <string name="youth_conference_title">Youth Conference</string>
    <string name="welcome_back">Welcome back</string>
    <string name="mobile_login">Login in with your mobile number</string>
    <string name="mobile">07xxx</string>
    <string name="login_btn">Login</string>
    <string name="or">OR</string>
    <string name="no_account">Register a new account?</string>
    <string name="sign_up">Sign up</string>
    <string name="default_web_client_id">501597316196-iecpqeq79c422ioi040rr4kvjcskur38.apps.googleusercontent.com</string>
    <string name="login_error">There was an error trying to login</string>
    <string name="login">Login</string>
    <string name="have_account">Already have an account?</string>
    <string name="name">Enter your username</string>
    <string name="name_mobile">Enter your mobile number</string>
    <string name="create_account">Create a new account</string>
    <string name="enter_otp">Enter the otp sent to your phone number</string>
    <string name="didnt_receive_code">Didn\'t receive code?</string>
    <string name="resend_otp">Resend</string>
    <string name="number_invalid">Kindly enter a valid phone number in the format 07xx</string>
    <string name="didnt_receive_otp">Didn\'t receive otp message?</string>
    <string name="mood_today">How are you feeling today?</string>
    <string name="sample_date">Today 09/08/23, 12:28</string>
    <string name="great">Great</string>
    <string name="awful">Awful</string>
    <string name="sad">Sad</string>
    <string name="good">Good</string>
    <string name="add_notes">Add Notes</string>
    <string name="note_here">Write your note here</string>
    <string name="anxiety">Anxiety</string>
    <string name="stress">Stress</string>
    <string name="traumatic_memories">Traumatic Memories</string>
    <string name="Stress">Stress</string>
    <string name="Anxiety">Anxiety</string>
    <string name="fear">Fear</string>
    <string name="overthinking">Overthinking</string>
    <string name="worried">Worried</string>
    <string name="none">None</string>
    <string name="depression">Depression</string>
    <string name="save">Save</string>
    <string name="what_problems">What are you currently going through?\n</string>
    <string name="personalizing">Personalizing your experience</string>
    <string name="home">home</string>
    <string name="consult">consult</string>
    <string name="chat">chat</string>
    <string name="profile">profile</string>
    <string name="meditation">meditation</string>
    <string name="welcome_back_user">Welcome back User\n</string>
    <string name="hello_user">Hello User\n</string>
    <string name="meditation_list">Meditation for you</string>
    <string name="view_all"><u>View All</u></string>
    <string name="mindfullness_meditation">Mindfullness\nMeditation</string>
    <string name="Consult">Consult</string>
    <string name="doctor_sample_name">Dr Poornima Doe</string>
    <string name="sample_rating">4.6</string>
    <string name="doctor_sample_education">M.B B.S DNB Psychiatry</string>
    <string name="doctor_sample_experience">12+ years of experience</string>
    <string name="doctor_sample_price">KSHS 5000</string>
    <string name="doctor_sample_price_old"><s>KSHS 6500</s></string>
    <string name="doctor_availabilty">Availability</string>
    <string name="doctor_availabilty_time">9AM to 1PM</string>
    <string name="book">book now\n</string>
    <string name="mood_tracker">Mood Tracker</string>
    <string name="feeling_anxious">Feeling Anxious?</string>
    <string name="ai_intro">Hello, I am Bella your AI Friend, Talk\nto me now</string>
    <string name="unlock_premium">Unlock Premium</string>
</resources>