<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_loans_card"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_150dp"
    android:layout_marginTop="@dimen/_20dp"
    android:layout_marginBottom="@dimen/_20dp"
    android:layout_marginStart="@dimen/_20dp"
    android:layout_marginEnd="@dimen/_20dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/_10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/therapist_image"
            android:layout_width="@dimen/_70dp"
            android:layout_height="@dimen/_70dp"
            android:src="@drawable/feeling_awful"
            android:background="@color/mint"
            android:scaleType="fitXY"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/therapist_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
        android:id="@+id/therapist_title"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/proximabold"
        android:textSize="@dimen/_16sp"
        android:layout_marginTop="@dimen/_10dp"
        tools:text="@string/doctor_sample_name"
        app:layout_constraintStart_toEndOf="@+id/therapist_image"
        app:layout_constraintEnd_toStartOf="@+id/rating_card"
        app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/therapist_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_dark"
            android:fontFamily="@font/proximasemibold"
            android:textSize="@dimen/_14sp"
            android:layout_marginTop="@dimen/_5dp"
            tools:text="@string/doctor_sample_education"
            app:layout_constraintStart_toStartOf="@+id/therapist_title"
            app:layout_constraintTop_toBottomOf="@+id/therapist_title"/>

        <TextView
            android:id="@+id/therapist_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_dark"
            android:fontFamily="@font/proximasemibold"
            android:textSize="@dimen/_14sp"
            android:layout_marginTop="@dimen/_5dp"
            tools:text="@string/doctor_sample_experience"
            app:layout_constraintStart_toStartOf="@+id/therapist_education"
            app:layout_constraintTop_toBottomOf="@+id/therapist_education"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/rating_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7dp"
            android:layout_marginEnd="@dimen/_15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.9"
            app:layout_constraintStart_toEndOf="@+id/therapist_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardBackgroundColor="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

        <ImageView
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_star_24"/>

        <TextView
            android:id="@+id/therapist_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_rating"
            android:textColor="@color/black"
            android:fontFamily="@font/proximabold"
            android:textSize="@dimen/_16sp"
            android:layout_marginTop="@dimen/_4dp"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/therapist_price"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/proximabold"
            android:textSize="@dimen/_16sp"
            android:layout_marginTop="@dimen/_20dp"
            tools:text="@string/doctor_sample_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/therapist_image"/>

        <TextView
            android:id="@+id/therapist__old_price"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_dark"
            android:fontFamily="@font/proximasemibold"
            android:textSize="@dimen/_14sp"
            android:layout_marginTop="@dimen/_20dp"
            tools:text="@string/doctor_sample_price_old"
            app:layout_constraintStart_toEndOf="@+id/therapist_price"
            app:layout_constraintTop_toBottomOf="@+id/therapist_image"/>

        <TextView
            android:id="@+id/therapist_availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_dark"
            android:fontFamily="@font/proximasemibold"
            android:textSize="@dimen/_16sp"
            tools:text="@string/doctor_availabilty"
            app:layout_constraintStart_toStartOf="@+id/therapist_price"
            app:layout_constraintTop_toBottomOf="@+id/therapist_price"/>

        <TextView
            android:id="@+id/therapist_availability_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_dark"
            android:fontFamily="@font/proximasemibold"
            android:textSize="@dimen/_16sp"
            tools:text="@string/doctor_availabilty_time"
            app:layout_constraintStart_toStartOf="@+id/therapist__old_price"
            app:layout_constraintTop_toTopOf="@+id/therapist_availability"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_book"
            android:layout_width="@dimen/_130dp"
            android:layout_height="@dimen/_38dp"
            android:layout_marginEnd="@dimen/_14dp"
            android:background="@drawable/btn_blue"
            android:text="@string/book"
            android:textAlignment="center"
            android:theme="@style/Button2Theme"
            app:backgroundTint="@color/appBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/therapist_availability_time" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>