<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_30dp">

            <TextView
                android:id="@+id/page_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14dp"
                android:layout_marginTop="@dimen/_20dp"
                android:fontFamily="@font/proximabold"
                android:text="@string/what_problems"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_anxiety"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_30dp"
                android:text="@string/Anxiety"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray_dark"
                android:paddingTop="@dimen/_15dp"
                android:paddingBottom="@dimen/_15dp"
                android:paddingStart="@dimen/_50dp"
                android:paddingEnd="@dimen/_50dp"
                app:flow_horizontalStyle="spread"
                app:strokeColor="@color/gray_dark"
                app:strokeWidth="@dimen/_2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/page_title"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_stress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_30dp"
                android:text="@string/Stress"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray_dark"
                android:paddingTop="@dimen/_15dp"
                android:paddingBottom="@dimen/_15dp"
                android:paddingStart="@dimen/_50dp"
                android:paddingEnd="@dimen/_50dp"
                app:strokeColor="@color/gray_dark"
                app:strokeWidth="@dimen/_2dp"
                app:layout_constraintStart_toEndOf="@+id/btn_anxiety"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/page_title"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_traumatic_memories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/traumatic_memories"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray_dark"
                android:paddingTop="@dimen/_15dp"
                android:paddingBottom="@dimen/_15dp"
                android:paddingStart="@dimen/_20dp"
                android:paddingEnd="@dimen/_20dp"
                app:strokeColor="@color/gray_dark"
                app:strokeWidth="@dimen/_2dp"
                app:layout_constraintStart_toEndOf="@+id/btn_anxiety"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_anxiety"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/sad"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray_dark"
                android:paddingTop="@dimen/_15dp"
                android:paddingBottom="@dimen/_15dp"
                android:paddingStart="@dimen/_50dp"
                android:paddingEnd="@dimen/_50dp"
                app:strokeColor="@color/gray_dark"
                app:strokeWidth="@dimen/_2dp"
                app:layout_constraintStart_toEndOf="@+id/btn_traumatic_memories"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_anxiety"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_fear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/fear"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray_dark"
                android:paddingTop="@dimen/_15dp"
                android:paddingBottom="@dimen/_15dp"
                android:paddingStart="@dimen/_50dp"
                android:paddingEnd="@dimen/_50dp"
                app:strokeColor="@color/gray_dark"
                app:strokeWidth="@dimen/_2dp"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_traumatic_memories"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_overthinking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/overthinking"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray_dark"
                android:paddingTop="@dimen/_15dp"
                android:paddingBottom="@dimen/_15dp"
                android:paddingStart="@dimen/_20dp"
                android:paddingEnd="@dimen/_20dp"
                app:strokeColor="@color/gray_dark"
                app:strokeWidth="@dimen/_2dp"
                app:layout_constraintStart_toEndOf="@+id/btn_fear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_traumatic_memories"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_worried"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/worried"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray_dark"
                android:paddingTop="@dimen/_15dp"
                android:paddingBottom="@dimen/_15dp"
                android:paddingStart="@dimen/_20dp"
                android:paddingEnd="@dimen/_20dp"
                app:strokeColor="@color/gray_dark"
                app:strokeWidth="@dimen/_2dp"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_fear"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/none"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray_dark"
                android:paddingTop="@dimen/_15dp"
                android:paddingBottom="@dimen/_15dp"
                android:paddingStart="@dimen/_20dp"
                android:paddingEnd="@dimen/_20dp"
                app:strokeColor="@color/gray_dark"
                app:strokeWidth="@dimen/_2dp"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_fear"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_depression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/depression"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray_dark"
                android:paddingTop="@dimen/_15dp"
                android:paddingBottom="@dimen/_15dp"
                android:paddingStart="@dimen/_20dp"
                android:paddingEnd="@dimen/_20dp"
                app:strokeColor="@color/gray_dark"
                app:strokeWidth="@dimen/_2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_none"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="@dimen/_130dp"
                android:layout_height="@dimen/_48dp"
                android:textAlignment="center"
                android:layout_marginEnd="@dimen/_14dp"
                android:layout_marginStart="@dimen/_14dp"
                android:background="@drawable/btn_blue"
                android:text="@string/save"
                android:theme="@style/Button2Theme"
                app:layout_constraintVertical_bias="0.7"
                app:backgroundTint="@color/appBlue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_depression"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>