<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/_517dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="@dimen/_76dp"
        android:layout_height="@dimen/_76dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginTop="@dimen/_50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_found"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_15sp"
        android:fontFamily="@font/nunitosansbold"
        android:layout_marginTop="@dimen/_34dp"
        app:layout_constraintTop_toBottomOf="@+id/animationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:text="@string/account_found_description"
        android:textColor="@color/dialog_text_gray"
        android:textSize="@dimen/_12sp"
        android:textAlignment="center"
        android:fontFamily="@font/nunitoregular"
        android:layout_marginTop="@dimen/_13dp"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_30dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48dp"
        android:background="@drawable/btn_blue"
        android:text="@string/activate"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sp"
        android:textAlignment="center"
        android:theme="@style/Button2Theme"
        app:backgroundTint="@color/appBlue"
        android:layout_marginStart="@dimen/_12dp"
        android:layout_marginEnd="@dimen/_12dp"
        android:layout_marginTop="@dimen/_27dp"
        android:layout_marginBottom="@dimen/_18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
